<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/calendar"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher_calendar2_round"
        android:roundIcon="@mipmap/ic_launcher_calendar2_round"
        android:title="@string/title_calendar" />

    <item
        android:id="@+id/board"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher_calendar"
        android:title="@string/title_board" />

    <item
        android:id="@+id/home"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher_neologism"
        android:title="@string/title_home" />
    <item
        android:id="@+id/neologism"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher_calendar"
        android:title="@string/title_neologism" />
    <item
        android:id="@+id/setting"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_setting" />
</menu>